# yaml-dataclass-config

./: .bumpversion.cfg  .gitignore  .pyup.yml  CLAUDE.md  Dockerfile  LICENSE  Pipfile  README.md  compose.yml  config.yml  pyproject.toml  setup.cfg  setup.py  tasks.py
.claude/: settings.json
.devcontainer/: compose.yml  devcontainer.json
.github/: dependabot.yml
.github/workflows/: analyze.yml  codeql.yml  deploy.yml  qlty.yml  test.yml
docs/: CONTRIBUTING.md  migration-1-to-2.md
myproduct/: __init__.py  config.py  config.yml  my_project.py
tests/: __init__.py  conftest.py  test___init__.py  test_config.py  test_config_handler.py  test_config_handler_pytest.py  test_config_handler_unittest.py  test_config_property.py  test_config_property_coverage.py  test_dataclasses_json_warnings.py  test_example.py  test_exceptions.py  test_factory.py  test_field_processor.py  test_nullable.py  test_type_defaults.py  test_utility.py  test_validation.py
tests/config/: __init__.py  test_config.py  test_config_validation.py  test_final_100_percent.py
tests/testconfigsuccessspecifyfilepath/: config.yml
tests/testresources/: config_b.yml  config_c.yml  validated_config.yml
tests/testresources/testsetupcasetargetoverridepathcurrentdirectory/: config.yml.bak
tests/testresources/testsetupcasetargetoverridepathcurrentdirectory/tests/: config.yml.dist
tests/tests/: config.yml.dist
yamldataclassconfig/: __init__.py  config.py  config_handler.py  config_property.py  exceptions.py  factory.py  field_processor.py  nullable.py  type_defaults.py  utility.py  validation.py
yourproduct/: __init__.py  config.py  config.yml  pytest_context.py  unittest_context.py
