[options]
setup_requires =
    pytest-runner
    
[flake8]
exclude = docs
# @see https://github.com/psf/black/blob/master/README.md#line-length
max-line-length = 120
extend-ignore = E203
statistics = True
show_source = True

[aliases]
# Define setup.py command aliases here
test = pytest

[radon]
cc_min = B
show_complexity = True
show_mi = True
